--- a/src/components/2_chatinput_elements/ButtonEmojiPicker/styles/themes/green.scss
+++ b/src/components/2_chatinput_elements/ButtonEmojiPicker/styles/themes/green.scss
@@ -18,4 +18,5 @@
   // ButtonEmojiPicker emoji variables
   --chotto-buttonemojipicker-emoji-position: absolute;
   --chotto-buttonemojipicker-emoji-bottom: 50px;
+  --chotto-buttonemojipicker-emoji-z-index: 2;
 }
